--- a/index.html
+++ b/index.html
@@ -146,18 +146,11 @@
 			</section>
 			<!--//about-me-section-->
 
-			<section class="contactme-section py-5">
+			<!-- <section class="contactme-section py-5">
 				<div class="container single-col-max-width">
 					<h4 class="text-center mb-2" id="contacts_section">My Contacts</h4>
 					<div class="text-center mb-5">Interested in hiring me for your project or just want to say hi</div>
 					<table class="table table-bordered">
-						<!-- <thead>
-							<tr class="border-0">
-								<th scope="col" class="pricing-package-title pricing-1-data text-center">Fiverr</th>
-								<th scope="col" class="pricing-package-title pricing-2-data text-center">Freelancer.com
-								</th>
-							</tr>
-						</thead> -->
 						<tbody>
 							<tr class="pricing-price-row">
 								<td class="pricing-3-data"><span class="price-number">Whatsapp</span></td>
@@ -168,18 +161,9 @@
 								<td class="pricing-3-data"><span class="price-number">live:ayoubkhan558</span></td>
 							</tr>
 						</tbody>
-						<!-- <tfoot>
-							<tr class="pricing-cta-row">
-								<td class="pricing-3-data"><a class="btn btn-primary" href="#">Get A Quote</a></td>
-								<td class="pricing-3-data"><a class="btn btn-primary" href="#">Get A Quote</a></td>
-							</tr>
-						</tfoot> -->
 					</table>
-					<!--//CONTACT ME-table-->
-
 				</div>
-				<!--//container-->
-			</section>
+			</section> -->
 
 
 			<section class="overview-section p-3 p-lg-5">
